--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <noscript><link rel="stylesheet" href="css/noscript.css"></noscript>
     <meta name="keywords" content="BLOG,Drive,Tools,Everything,thun888">
     <meta name="description" content="BLOG,Drive,Tools,Everything,thun888">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+    <script src="https://unpkg.com/jquery@3.2.1/dist/jquery.min.js"></script>
 </head>
 
 <script>
@@ -66,7 +66,7 @@
             document.body.scrollTop = 0;
         }
     </script>
-
+<script async defer data-website-id="f250cf18-800c-4682-8055-a56ea85bf2d8" src="https://record.thun888.xyz/umami.js"></script>
 </body>
 
 </html>
