--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-    <title>主页 - 😊thun888.xyz</title>
+    <title>主页 - thun888.xyz</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="shortcut icon" href="https://www.unpkg.com/thun888-oss@1.0.0/img/base/favicion.ico" type="image/x-icon">
