--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                         <li><a href="https://blog.thun888.xyz" class="fa fa-book" alt="Blog"><span class="label">Blog</span></a></li>
                         <li><a href="https://github.com/thun888" class="fa fa-github" alt="Github"><span class="label">Github</span></a></li>
                         <!--<li><a href="https://tools.thun888.xyz" class="fa fa-wrench" alt="tools"><span class="label">tools</span></a></li>-->
-                        <li><a href="https://share.thun888.xyz" class="fa fa-cloud" alt="onedrive"><span class="label">Onedrive</span></a></li>
+                        <li><a href="https://share.thun888.xyz" class="fa fa-cloud-download" alt="onedrive"><span class="label">Onedrive</span></a></li>
+                        <li><a href="https://pan.thun888.xyz" class="fa fa-cloud" alt="onedrive"><span class="label">Ztale</span></a></li>
                         <!--<li><a href="https://web.thun888.xyz" class="fa fa-list-alt" alt="websites"><span class="label">Websites</span></a></li>-->
                         <li><a href="https://blog.thun888.xyz/about" class="fa fa-address-card" alt="About"><span class="label">About</span></a></li>
                         <!--<li><a href="#" class="fa fa-user-secret" alt="Blog"><span class="label">隐私政策</span></a></li>-->
