--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-    <title>主页 - thun888.xyz</title>
+    <title>主页 - hzchu.top</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="shortcut icon" href="https://www.unpkg.com/thun888-oss@1.0.0/img/base/favicion.ico" type="image/x-icon">
@@ -41,15 +41,15 @@
                 <nav>
                     <ul>
 
-                        <li><a href="https://blog.thun888.xyz" class="fa fa-book" alt="Blog"><span class="label">Blog</span></a></li>
+                        <li><a href="https://blog.hzchu.top" class="fa fa-book" alt="Blog"><span class="label">Blog</span></a></li>
                         <li><a href="https://github.com/thun888" class="fa fa-github" alt="Github"><span class="label">Github</span></a></li>
-                        <!--<li><a href="https://tools.thun888.xyz" class="fa fa-wrench" alt="tools"><span class="label">tools</span></a></li>-->
-                        <li><a href="https://share.thun888.xyz" class="fa fa-cloud-download" alt="onedrive"><span class="label">Onedrive</span></a></li>
-                        <li><a href="https://pan.thun888.xyz" class="fa fa-cloud" alt="onedrive"><span class="label">Ztale</span></a></li>
-                        <!--<li><a href="https://web.thun888.xyz" class="fa fa-list-alt" alt="websites"><span class="label">Websites</span></a></li>-->
-                        <li><a href="https://blog.thun888.xyz/about" class="fa fa-address-card" alt="About"><span class="label">About</span></a></li>
+                        <!--<li><a href="https://tools.hzchu.top" class="fa fa-wrench" alt="tools"><span class="label">tools</span></a></li>-->
+                        <li><a href="https://share.hzchu.top" class="fa fa-cloud-download" alt="onedrive"><span class="label">Onedrive</span></a></li>
+                        <li><a href="https://pan.hzchu.top" class="fa fa-cloud" alt="onedrive"><span class="label">Ztale</span></a></li>
+                        <!--<li><a href="https://web.hzchu.top" class="fa fa-list-alt" alt="websites"><span class="label">Websites</span></a></li>-->
+                        <li><a href="https://blog.hzchu.top/about/" class="fa fa-address-card" alt="About"><span class="label">About</span></a></li>
                         <!--<li><a href="#" class="fa fa-user-secret" alt="Blog"><span class="label">隐私政策</span></a></li>-->
-                        <li><a href="https://blog.thun888.xyz/atom.xml" class="fa fa-rss" alt="rss"><span class="label">rss</span></a></li>
+                        <li><a href="https://blog.hzchu.top/atom.xml" class="fa fa-rss" alt="rss"><span class="label">rss</span></a></li>
                     </ul>
                 </nav>
             </header>
