--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>主页 - hzchu.top</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="shortcut icon" href="https://www.unpkg.com/thun888-oss@1.0.0/img/base/favicion.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicion.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/main.css">
     <noscript><link rel="stylesheet" href="css/noscript.css"></noscript>
     <meta name="keywords" content="BLOG,Drive,Tools,Everything,thun888">
     <meta name="description" content="BLOG,Drive,Tools,Everything,thun888">
-    <script src="https://unpkg.com/jquery@3.2.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <script>
@@ -36,19 +36,17 @@
         <div id="main">
 
             <header id="header">
-                <h1>Thun888</h1>
+                <img src="https://onep.hzchu.top/mount/pic/logo.svg" alt="logo" id="logo">
                 <p>Home</p>
                 <nav>
                     <ul>
 
                         <li><a href="https://blog.hzchu.top" class="fa fa-book" alt="Blog"><span class="label">Blog</span></a></li>
                         <li><a href="https://github.com/thun888" class="fa fa-github" alt="Github"><span class="label">Github</span></a></li>
-                        <!--<li><a href="https://tools.hzchu.top" class="fa fa-wrench" alt="tools"><span class="label">tools</span></a></li>-->
                         <li><a href="https://share.hzchu.top" class="fa fa-cloud-download" alt="onedrive"><span class="label">Onedrive</span></a></li>
                         <li><a href="https://pan.hzchu.top" class="fa fa-cloud" alt="onedrive"><span class="label">Ztale</span></a></li>
-                        <!--<li><a href="https://web.hzchu.top" class="fa fa-list-alt" alt="websites"><span class="label">Websites</span></a></li>-->
+                        <li><a href="https://pic.hzchu.top" class="fa fa-photo" alt="photo"><span class="label">图床</span></a></li>
                         <li><a href="https://blog.hzchu.top/about/" class="fa fa-address-card" alt="About"><span class="label">About</span></a></li>
-                        <!--<li><a href="#" class="fa fa-user-secret" alt="Blog"><span class="label">隐私政策</span></a></li>-->
                         <li><a href="https://blog.hzchu.top/atom.xml" class="fa fa-rss" alt="rss"><span class="label">rss</span></a></li>
                     </ul>
                 </nav>
@@ -67,6 +65,21 @@
             document.body.scrollTop = 0;
         }
     </script>
+    <style>
+        #logo {
+            width: 50%;
+        }
+        @media screen and (max-width: 720px) {
+            #logo {
+                width: 60%;
+            }
+        }
+        @media screen and (max-width: 350px) {
+            #logo {
+                width: 80%;
+            }
+        }
+    </style>
 </body>
 
 </html>
