--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <noscript><link rel="stylesheet" href="css/noscript.css"></noscript>
     <meta name="keywords" content="BLOG,Drive,Tools,Everything,thun888">
     <meta name="description" content="BLOG,Drive,Tools,Everything,thun888">
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://registry.npmmirror.com/jquery/3.2.1/files/dist/jquery.min.js"></script>
 </head>
 
 <script>
@@ -69,9 +69,19 @@
         #logo {
             width: 50%;
         }
-        @media screen and (max-width: 720px) {
+        @media screen and (min-width: 1600px) {
+            #logo {
+                width: 45%;
+            }
+        }
+        @media screen and (max-width: 820px) {
             #logo {
                 width: 60%;
+            }
+        }
+        @media screen and (max-width: 500px) {
+            #logo {
+                width: 80%;
             }
         }
         @media screen and (max-width: 350px) {
