--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>主页 - hzchu.top</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="shortcut icon" href="./favicion.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/main.css">
     <noscript><link rel="stylesheet" href="css/noscript.css"></noscript>
     <meta name="keywords" content="BLOG,Drive,Tools,Everything,thun888">
     <meta name="description" content="BLOG,Drive,Tools,Everything,thun888">
-    <script src="https://registry.npmmirror.com/jquery/3.2.1/files/dist/jquery.min.js"></script>
+    <script src="https://static.hzchu.top/jquery/3.2.1/files/dist/jquery.min.js"></script>
 </head>
 
 <script>
