--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="main">
 
             <header id="header">
-                <img src="https://onep.hzchu.top/mount/pic/logo.svg" alt="logo" id="logo">
+                <img src="https://onep.hzchu.top/mount/pic/myself/2024/07/6694d82b4f885.png?fnt=webp" alt="logo" id="logo">
                 <p>Home</p>
                 <nav>
                     <ul>
@@ -68,10 +68,11 @@
     <style>
         #logo {
             width: 50%;
+            transition: width 0.5s ease-in-out; /* 添加这一行 */
         }
         @media screen and (min-width: 1600px) {
             #logo {
-                width: 45%;
+                width: 55%;
             }
         }
         @media screen and (max-width: 820px) {
@@ -86,10 +87,11 @@
         }
         @media screen and (max-width: 350px) {
             #logo {
-                width: 80%;
+                width: 100%;
             }
         }
     </style>
+    <script defer src="https://seeyou.hzchu.top/seeyou.js" data-website-id="3ad7123e-306f-4db3-b0d6-fed123bbb672"></script>
 </body>
 
 </html>
